[gd_scene load_steps=13 format=3 uid="uid://v8u8oswwmlf3"]

[ext_resource type="Texture2D" uid="uid://ci7y27fysy52o" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/images/unfolded.svg" id="2_2nsse"]
[ext_resource type="Texture2D" uid="uid://d00v4pleoufwq" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/images/to_do.svg" id="2_6dyr4"]
[ext_resource type="Script" uid="uid://drqri80pio2r1" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/todo_item.gd" id="2_6v2l5"]
[ext_resource type="Script" uid="uid://dnkjpbn8pmav1" path="res://custom/toggle_button.gd" id="2_n5f11"]
[ext_resource type="Texture2D" uid="uid://b80hle2h5sj20" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/images/drag_indicator.svg" id="3_avsfu"]
[ext_resource type="Script" uid="uid://bqai4pv020yjf" path="res://custom/tooltip.gd" id="3_oduck"]
[ext_resource type="Texture2D" uid="uid://6im7rq1y7co6" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/images/folded.svg" id="4_fnk6y"]
[ext_resource type="Texture2D" uid="uid://3ry73dkvfi1u" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/images/bookmark_indicator.svg" id="5_eqyfo"]
[ext_resource type="Script" uid="uid://vmmkt3uxuea7" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/drag_handle/drag_handle.gd" id="5_mx38m"]
[ext_resource type="Texture2D" uid="uid://cwihi2ij3jbsp" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/todo_item/images/copy_to_today.svg" id="7_81xmb"]
[ext_resource type="Script" uid="uid://dttt783sjv872" path="res://main_window/list_view/day_panel/scrollable_todo_list/todo_list/item_list.gd" id="10_sj4p5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sj4p5"]
content_margin_right = 8.0

[node name="ToDoItem" type="VBoxContainer" groups=["todo_item"]]
offset_right = 1920.0
offset_bottom = 27.0
mouse_filter = 2
script = ExtResource("2_6v2l5")

[node name="UpperPadding" type="Control" parent="."]
custom_minimum_size = Vector2(0, 13)
layout_mode = 2
mouse_filter = 2

[node name="MainRow" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 27)
layout_mode = 2
theme_type_variation = &"ToDoItem_MainRow"

[node name="HBox" type="HBoxContainer" parent="MainRow"]
layout_mode = 2
mouse_filter = 2

[node name="Toggle" type="MarginContainer" parent="MainRow/HBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"ToDoItem_TogglePadding"

[node name="CheckBox" type="Button" parent="MainRow/HBox/Toggle"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 20
icon = ExtResource("2_6dyr4")
flat = true

[node name="Tooltip" type="Node" parent="MainRow/HBox/Toggle/CheckBox"]
script = ExtResource("3_oduck")
text = "L-Click: Mark As Done
R-Click: Mark As Canceled"
popup_delay = 2.5
gap_width = 6
metadata/_custom_type_script = "uid://bqai4pv020yjf"

[node name="FoldHeading" type="Button" parent="MainRow/HBox/Toggle"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 20
toggle_mode = true
icon = ExtResource("2_2nsse")
flat = true
script = ExtResource("2_n5f11")
icon_toggled_off = ExtResource("2_2nsse")
icon_toggled_on = ExtResource("4_fnk6y")

[node name="Tooltip" type="Node" parent="MainRow/HBox/Toggle/FoldHeading"]
script = ExtResource("3_oduck")
popup_delay = 1.5
gap_width = 6
metadata/_custom_type_script = "uid://bqai4pv020yjf"

[node name="Edit" type="LineEdit" parent="MainRow/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"LineEdit_Minimal"
placeholder_text = "Enter to-do..."
context_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
caret_blink_interval = 0.45

[node name="ExtraInfo" type="Label" parent="MainRow/HBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"ToDoItem_ExtraInfo"
theme_override_styles/normal = SubResource("StyleBoxEmpty_sj4p5")

[node name="BookmarkIndicator" type="TextureRect" parent="MainRow/HBox"]
unique_name_in_owner = true
modulate = Color(0.505882, 0.631373, 0.756863, 1)
custom_minimum_size = Vector2(21, 23)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
texture = ExtResource("5_eqyfo")
expand_mode = 1
stretch_mode = 4

[node name="Tooltip" type="Node" parent="MainRow/HBox/BookmarkIndicator"]
script = ExtResource("3_oduck")
text = "Bookmarked To-Do"

[node name="CopyToToday" type="Button" parent="MainRow/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 18
icon = ExtResource("7_81xmb")

[node name="Tooltip" type="Node" parent="MainRow/HBox/CopyToToday"]
script = ExtResource("3_oduck")
text = "Copy To-Do to Today"
popup_position = 5

[node name="DragHandle" type="Button" parent="MainRow/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 6
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 23
icon = ExtResource("3_avsfu")
script = ExtResource("5_mx38m")

[node name="Tooltip" type="Node" parent="MainRow/HBox/DragHandle"]
script = ExtResource("3_oduck")
text = "Move To-Do"
popup_position = 5

[node name="Indentation" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 25

[node name="SubItems" type="VBoxContainer" parent="Indentation"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
script = ExtResource("10_sj4p5")

[node name="UnfoldTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
